--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -578,3 +578,8 @@ created this lead,đã tạo lead này
 created this deal,đã tạo deal này
 Last Modified,Được chỉnh sửa lần cuối
 Add Video,Thêm Video
+Uploading,Đang tải
+Change Video,Thay đổi Video
+Upload Video,Tải lên
+Remove,Xóa Video
+Insert Video,Thêm Video
