--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -580,3 +580,8 @@ Change Video,Thay đổi Video
 Upload Video,Tải lên
 Remove,Xóa Video
 Insert Video,Thêm Video
+Import,Nhập dữ liệu
+Search customer,Tìm kiếm khách hàng
+Search organization,Tìm kiếm tổ chức
+Search content,Tìm kiếm ghi chú
+Search task,Tìm kiếm công việc
