--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -584,3 +584,4 @@ Search customer,Tìm kiếm khách hàng
 Search organization,Tìm kiếm tổ chức
 Search content,Tìm kiếm ghi chú
 Search task,Tìm kiếm công việc
+Write Content...,Nhập nội dung...
