--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -585,3 +585,4 @@ Search organization,Tìm kiếm tổ chức
 Search content,Tìm kiếm ghi chú
 Search task,Tìm kiếm công việc
 Write Content...,Nhập nội dung...
+Mobile No should be 10 digits,Số điện thoại phải bao gồm 10 số
