--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -586,3 +586,4 @@ Search content,Tìm kiếm ghi chú
 Search task,Tìm kiếm công việc
 Write Content...,Nhập nội dung...
 Mobile No should be 10 digits,Số điện thoại phải bao gồm 10 số
+New Comment,Thêm bình luận
