init danh muc tieng viet

--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -599,3 +599,5 @@ Don't Import,Không nhập
 Name,Tên
 Assign To,Phân công cho
 Invalid phone number,Số điện thoại không hợp lệ
+Open,Mở,
+Replied,Đã trả lời
