--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -450,7 +450,7 @@ Twilio Agents,Đại lý Twilio
 Twilio Number,Số Twilio
 Twilio Settings,Cài đặt Twilio
 Type,Loại
-Type your message here...,Nhập tin nhắn của bạn ở đây...
+Type your comment here...,Nhập bình luận của bạn ở đây...
 Unknown,Không xác định
 Unpin View,Bỏ ghim Chế độ xem
 Untitled,Chưa có tiêu đề
