--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -602,3 +602,5 @@ Select another image,Chọn ảnh khác
 Select an image,Chọn một ảnh
 Insert Image,Thêm ảnh
 Set Link,Đặt liên kết
+Hide all reply comments,Ẩn tất cả các bình luận
+Show all reply comments,Hiển thị tất cả các bình luận
