--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -513,6 +513,8 @@ Select Industry...,Chọn Lĩnh vực...
 Select Territory...,Chọn Khu vực...
 Add Job Title...,Thêm Chức danh...
 Select Source...,Chọn Nguồn...
+Select Lead Owner...,Chọn người phụ trách...
+Select Salutation...,Chọn xưng hô...
 Add Email...,Thêm Email...
 Add Mobile No...,Thêm Số di động...
 Organization 1,Tổ chức 1
