--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -609,6 +609,7 @@ Insert Image,Thêm ảnh
 Set Link,Đặt liên kết
 Due Date: 01/04/2024 11:30 PM,Ngày đáo hạn: 01/04/2024 11:30 PM
 Remind task,Nhắc nhở công việc
+Remind Task, Thời gian nhắc nhở
 Hide all reply comments,Ẩn tất cả các bình luận
 Show all reply comments,Hiển thị tất cả các bình luận
 Reply Comment,Phản hồi
@@ -672,6 +673,7 @@ No Comment,Không có bình luận
 All,Tất cả
 Comments,Bình luận
 Reminds,Nhắc nhở
+added a,đã thêm một
 
 
 
