fix bug and build app

--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -693,3 +693,4 @@ Select Remind task,Chọn ngày nhắc nhở công việc
 Email name,Tên email
 Select field,Chọn trường thông tin
 Task name,Tên công việc
+Remind task,Ngày nhắc nhở
