update file localization

--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -694,3 +694,5 @@ Email name,Tên email
 Select field,Chọn trường thông tin
 Task name,Tên công việc
 Remind task,Ngày nhắc nhở
+Created On,Ngày tạo,
+Modified By,Chỉnh sửa bởi
