--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -526,7 +526,7 @@ VietNam,Việt Nam
 Technology,Công nghệ
 Mr,Ông
 Male,Nam
-Qualification,Trình độ
+Qualification,Chất lượng
 Demo/Making,Demo/Tạo
 Proposal/Quotation,Đề xuất/Báo giá
 Negotiation,Đàm phán
