fix bug order catalog and empty data

--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -710,3 +710,5 @@ records,bản ghi
 Creator,Người tạo
 Select organization from the list, Chọn tổ chức từ danh sách
 Select contact from the list, Chọn liên hệ từ danh sách
+No territory have been created yet,Chưa có khu vực được tạo
+No industry have been created yet,Chưa có ngành nghề được tạo
