--- a/crm/translations/vi.csv
+++ b/crm/translations/vi.csv
@@ -704,3 +704,8 @@ No WhatsApp Messages,Không có tin nhắn WhatsApp,
 "This field is read only and cannot be edited.","Trường này chỉ được đọc và không thể chỉnh sửa.",
 "Please setup default outgoing Email Account from Tools > Email Account","Vui lòng thiết lập tài khoản email gửi mặc định trong Công cụ > Tài khoản Email",
 You have been invited to join {0},Bạn đã được mời tham gia {0},
+Done,Hoàn thành,
+Canceled,Đã hủy,
+Data Updated,Dữ liệu đã cập nhật,
+Error,Lỗi,
+Contact updated,Liên hệ đã cập nhật,
